changed some part of html code and CSS by Patrick

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,10 @@
 
 .main {
     width: 100%;
-    background: linear-gradient(to top, rgba(121, 107, 230, 0.5)50%, rgba(0, 0, 0, 0.5)50%), url(../rizki-dwi-yd1wWWilf4o-unsplash.jpg);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%), url(../rizki-dwi-yd1wWWilf4o-unsplash.jpg);
     background-position: center;
     background-size: cover;
-    height: 150vh;
+    height: 220vh;
 }
 
 .head {
@@ -20,33 +20,47 @@
 }
 
 .form {
-    height: 380px;
-    background: linear-gradient(to top, rgba(66, 50, 209, 0.8)50%, rgba(0, 0, 0, 0.8)50%);
+    height: 1100px;
+    width: 500px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.8)50%);
     position: absolute;
     top: 200px;
     left: 350px;
     border-radius: 10px;
+    padding-left: 30px;
+    padding-top: 20px;
 }
 
 .form label {
     width: 240px;
-    height: 35px;
+    height: 50px;
     border-top: none;
     border-right: none;
     border-left: none;
     color: #fff;
-    font-size: 15px;
+    font-size: 18px;
     letter-spacing: 1px;
     margin-top: 30px;
     font-family: sans-serif;
 }
 
-.form input:hover {
-    background: linear-gradient(to top, rgba(66, 50, 209, 0.8)50%, rgba(0, 0, 0, 0.8)50%);
+.form p {
+    color: #fff;
 }
 
 .btn {
-    text-align: center;
-    text-transform: uppercase;
-    background: #087e04;
+    width: 420px;
+    height: 40px;
+    background: green;
+    border: none;
+    margin-top: 30px;
+    font-size: 18px;
+    border: none;
+    cursor: pointer;
+    color: #000;
+    transition: .4s ease;
+}
+
+.btn:hover {
+    color: #fff;
 }
